--- a/static/css/components.css
+++ b/static/css/components.css
@@ -117,9 +117,9 @@
 }
 
 [data-theme="dark"] .badge-channel {
-    background-color: rgba(88, 166, 255, 0.15);
-    color: #58a6ff;
-    border-color: rgba(88, 166, 255, 0.3);
+    background-color: rgba(255, 193, 7, 0.15);
+    color: #ffc107;
+    border: none;
 }
 
 .badge-bookmark {
